[package]
name = "trm-labs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-trait = "0.1.83"
bon = "2.3.0"
chrono = "0.4.38"
eyre = "0.6.12"
moka = { version = "0.12.8", features = ["future"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
] }
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread"] }
