[package]
name = "trm-labs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
bon = "2.3.0"
chrono = "0.4.38"
eyre = "0.6.12"
moka = { version = "0.12.8", features = ["future"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
] }
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
